simplify union ordering logic